fix: Features sub menu text align fixed

--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ header.flex {
 .register-button {
   border: solid 2px hsl( var(--clr-medium-gray) );
   border-radius: 1rem;
-  padding: 0.75rem;
+  padding: 0.75rem 1.25rem;
   width: 100%;
   text-align: center;
 }
